// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-router-pagination <Centered /> With \`pageNumber\` and \`totalPages\` and \`spread\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="zero-page"
  >
    <a
      href="/1"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        1
      </span>
    </a>
  </li>
  <li
    className="reverse-page"
  >
    <a
      href="/6"
      onClick={[Function]}
    >
      <span
        className="reverse"
      >
        ‹
      </span>
    </a>
  </li>
  <li
    className="page"
  >
    <a
      href="/7"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        7
      </span>
    </a>
  </li>
  <li
    className="page"
  >
    <a
      href="/8"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        8
      </span>
    </a>
  </li>
  <li
    className="current-page"
  >
    <a
      href="/9"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        9
      </span>
    </a>
  </li>
</ul>
`;

exports[`react-router-pagination <Pagination /> With \`pageNumber\` and \`totalPages\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="forward-page"
  >
    <a
      href="/1"
      onClick={[Function]}
    >
      <span
        className="forward"
      >
        ›
      </span>
    </a>
  </li>
  <li
    className="last-page"
  >
    <a
      href="/2"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        2
      </span>
    </a>
  </li>
</ul>
`;

exports[`react-router-pagination <Standard /> With \`pageNumber\` and \`totalPages\` and \`spread\` renders 1`] = `
<ul
  className="pagination"
>
  <li
    className="zero-page"
  >
    <a
      href="/1"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        1
      </span>
    </a>
  </li>
  <li
    className="reverse-page"
  >
    <a
      href="/6"
      onClick={[Function]}
    >
      <span
        className="reverse"
      >
        ‹
      </span>
    </a>
  </li>
  <li
    className="page"
  >
    <a
      href="/7"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        7
      </span>
    </a>
  </li>
  <li
    className="page"
  >
    <a
      href="/8"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        8
      </span>
    </a>
  </li>
  <li
    className="current-page"
  >
    <a
      href="/9"
      onClick={[Function]}
    >
      <span
        className="page-number"
      >
        9
      </span>
    </a>
  </li>
</ul>
`;
